# test_simd

./: .gitignore  CMakeLists.txt  EnableKokkos.cmake  cvec4.h  cvec4_copy.h  event_handle.h  event_handle_copy.h  main.cpp  main_ggg.cpp  main_ggg_hw.cpp  main_hw.cpp  main_kokkos.cpp  main_serial.cpp  main_views.cpp  recursion.h  run.sh  vec4.h  vec4_copy.h
experimental/: cvec4.h  event_handle.h  main_views.cpp  vec4.h
